--- a/vignettes/Documentation/tradeDocumentation.Rmd
+++ b/vignettes/Documentation/tradeDocumentation.Rmd
@@ -29,10 +29,11 @@ prefiltered in the following way:
 
 - **Eurostat**
 
-  - code of reporters and partners should only be numeric (letters
-    are not allowed)
+  - only numeric codes of reporters and partners are kept (letters
+    are not allowed).
 
-  - code of CN8 (hs) just numeric (letters are not allowed)
+  - only numeric CN8 codes (`hs`) are kept (letters are not
+    allowed)
 
       ##   reporter partner       hs flow year  value weight   qty    hs6
       ## 1       11      10 85193000    2 2009  83.96    2.2  1010 851930
@@ -42,19 +43,21 @@ prefiltered in the following way:
       ## 5       11      10 85198125    2 2009  17.07    0.0   171 851981
       ## 6       11      10 85198131    1 2009   9.90    0.0   159 851981
 
+  - only `stat_regime` equal to 4 is kept.
+
 - **UNSD**
 
-  - code of HS (comm) just numeric (letters are not allowed). If
-    any codes are still alphanumeric please ask team F to check,
-    since this step is performed by them. The module downloads
-    only records of commodities of interest for Tariffline Data.
-    The HS chapters are the following: 01, 02, 03, 04, 05, 06, 07,
-    08, 09, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22,
-    23, 24, 33, 35, 38, 40, 41, 42, 43, 50, 51, 52, 53. In the
-    future, if other commotidy are of interest for the division,
-    it is important to include additional chapter in the first
-    step of the downloading. For Eurostat Data no filtering is
-    applied.
+  - only numeric HS (`hs`) codes are kept (letters are not
+    allowed). If any codes are still alphanumeric please ask team
+    F to check, since this step is performed by them.
+
+    The module downloads only records of commodities of interest
+    for Tariffline Data. The HS chapters are the following: 01,
+    02, 03, 04, 05, 06, 07, 08, 09, 10, 11, 12, 13, 14, 15, 16,
+    17, 18, 19, 20, 21, 22, 23, 24, 33, 35, 38, 40, 41, 42, 43,
+    50, 51, 52, 53. In the future, if other commodities become of
+    interest for the division, it is important to include
+    additional chapters in the first step of the downloading.
 
       ##   reporter partner       hs flow year     value weight qty qunit    hs6
       ## 1       90     458     3303    1 2009  54.75252     NA  NA     1   3303
@@ -76,141 +79,143 @@ rows containinig non-missing values and quantities are summed.
 ### Mapping UNSD Tariffline and Eurostat data
 
 At this stage a standardization/mapping step is performed. The
-details are devided between UNSD Tariffline and Eurostat due to
+details are divided between UNSD Tariffline and Eurostat due to
 the nature of the differences among the two datasets.
 
--   **UNSD Tariffline**
+#### UNSD Tariffline
 
-  1. UNSD Tariffline data reports area code with Tariffline M49
-     standard (which are different for official M49). The area
-     code is converted in FAO country code using a specific
-     convertion table provided by Team ENV. Area codes not mapping
-     to any FAO country code or mapping to code 252 (which
-     correpond not defined area) are separately saved and removed
-     from further analyses.
+1. UNSD Tariffline data reports area code with Tariffline M49
+   standard (which are different for official M49). The area code
+   is converted in FAO country code using a specific convertion
+   table provided by Team ENV. Area codes not mapping to any FAO
+   country code or mapping to code 252 (which correponds to
+   undefined areas) are separately saved and removed from further
+   analyses.
 
-      ##     m49 fao
-      ## 164 270  75
-      ## 26  280  79
-      ## 294 716 181
-      ## 241 634 179
-      ## 38  471 252
-      ## 106  51   1
+    ##     m49 fao
+    ## 164 270  75
+    ## 26  280  79
+    ## 294 716 181
+    ## 241 634 179
+    ## 38  471 252
+    ## 106  51   1
 
-  2. Commodity codes are reported in HS codes (*Harmonized
-     Commodity Description and Coding System*). The codes are
-     converted in FCL (FAO Commodity List) codes. This step is
-     performed using table incorporated in the SWS. In this step,
-     all the mapping between HS and FCL code is stored. If a
-     country is not included in the package of the mapping for
-     that specific year, all the records for the reporting country
-     are removed. All records without an FCL mapping are filtered
-     out and saved in specific variables.
+2. Commodity codes are reported in HS codes (*Harmonized Commodity
+   Description and Coding System*). The codes are converted in FCL
+   (*FAO Commodity List*) codes. This step is performed using a
+   table incorporated in the SWS. In this step, all the mapping
+   between HS and FCL code is stored. If a country is not included
+   in the package of the mapping for that specific year, all the
+   records for the reporting country are removed. All records
+   without an FCL mapping are filtered out and saved in specific
+   variables.
 
-      ##    validyear area flow   fromcode     tocode  fcl
-      ## 1         NA   81    2 0407001900 0407001900 1062
-      ## 2         NA  154    2 2009291100 2009291100  510
-      ## 3       2009  157    1 0714200090 0714200090  122
-      ## 4         NA  211    1   20059910   20059910  472
-      ## 5         NA   84    2   02073685   02073685 1075
-      ## 6         NA  101    2  230610000  230619999  332
-      ## 7         NA   13    2   19052000   19052999   22
-      ## 8         NA  236    2 0204210000 0204210000  977
-      ## 9         NA  134    1   04069019   04069019  904
-      ## 10        NA    9    1   09012100   09012199  657
+    ##    validyear area flow   fromcode     tocode  fcl
+    ## 1         NA   81    2 0407001900 0407001900 1062
+    ## 2         NA  154    2 2009291100 2009291100  510
+    ## 3       2009  157    1 0714200090 0714200090  122
+    ## 4         NA  211    1   20059910   20059910  472
+    ## 5         NA   84    2   02073685   02073685 1075
+    ## 6         NA  101    2  230610000  230619999  332
+    ## 7         NA   13    2   19052000   19052999   22
+    ## 8         NA  236    2 0204210000 0204210000  977
+    ## 9         NA  134    1   04069019   04069019  904
+    ## 10        NA    9    1   09012100   09012199  657
 
-  3. Information of the FCL units is added.
+3. Information of the FCL units is added.
 
-      ##   fcl fclunit
-      ## 1  15      mt
-      ## 2  16      mt
-      ## 3  17      mt
-      ## 4  18      mt
-      ## 5  19      mt
-      ## 6  20      mt
+    ##   fcl fclunit
+    ## 1  15      mt
+    ## 2  16      mt
+    ## 3  17      mt
+    ## 4  18      mt
+    ## 5  19      mt
+    ## 6  20      mt
 
-  4. Just for UNSD Tariffline data convertion of units of
-     measurements are applied to meet FAO standards, where all
-     weights are reported in metric tonnes, animals in heads or
-     1000 heads and for some commodity just the value is provided.
+4. Just for UNSD Tariffline data convertion of units of
+   measurements are applied to meet FAO standards, where all
+   weights are reported in metric tonnes, animals in heads or 1000
+   heads and for some commodity just the value is provided.
 
-  5. The flow codes of re-Import (4) are recoded into Import (1)
-     and codes of re-Export (3) to Export (2). This procedure is
-     applied following UNSD standards:
+5. The flow codes of re-Import (code 4) are recoded into Import
+   (code 1) and codes of re-Export (code 3) to Export (code 2).
+   This procedure is applied following UNSD standards:
 
-     > Exports of a country can be distinguished as exports of
-     > domestic goods and exports of foreign goods. The second
-     > class is generally referred to as re-exports. The exports
-     > shown in our database contain both the exports of domestic
-     > and foreign goods. Re-exports are exports of foreign goods
-     > in the same state as previously imported; they are to be
-     > included in the country exports. It is recommended that
-     > they be recorded separately for analytical purposes. This
-     > may require the use of supplementary sources of information
-     > in order to determine the origin of re-exports, i.e., to
-     > determine that the goods in question are indeed re-exports
-     > rather than the export of goods that have acquired domestic
-     > origin through processing. Re-imports are goods imported in
-     > the same state as previously exported. They are included in
-     > the country imports. It is recommended that they be
-     > recorded separately for analytical purposes. This may
-     > require the use of supplementary sources of information in
-     > order to determine the origin of re-imports, i.e., to
-     > determine that the goods in question are indeed re-imports
-     > rather than the import of goods that have acquired foreign
-     > origin through processing. There are several reasons why an
-     > exported good might return to the country of origin. The
-     > exported good might be defective, the importer might have
-     > defaulted on payments or cancelled the order, the
-     > authorities might have imposed an import barrier, or demand
-     > or prices in the country of origin might have made it
-     > worthwhile to bring the good back.
+   > Exports of a country can be distinguished as exports of
+   > domestic goods and exports of foreign goods. The second class
+   > is generally referred to as re-exports. The exports shown in
+   > our database contain both the exports of domestic and foreign
+   > goods. Re-exports are exports of foreign goods in the same
+   > state as previously imported; they are to be included in the
+   > country exports. It is recommended that they be recorded
+   > separately for analytical purposes. This may require the use
+   > of supplementary sources of information in order to determine
+   > the origin of re-exports, i.e., to determine that the goods
+   > in question are indeed re-exports rather than the export of
+   > goods that have acquired domestic origin through processing.
+   > Re-imports are goods imported in the same state as previously
+   > exported. They are included in the country imports. It is
+   > recommended that they be recorded separately for analytical
+   > purposes. This may require the use of supplementary sources
+   > of information in order to determine the origin of
+   > re-imports, i.e., to determine that the goods in question are
+   > indeed re-imports rather than the import of goods that have
+   > acquired foreign origin through processing. There are several
+   > reasons why an exported good might return to the country of
+   > origin. The exported good might be defective, the importer
+   > might have defaulted on payments or cancelled the order, the
+   > authorities might have imposed an import barrier, or demand
+   > or prices in the country of origin might have made it
+   > worthwhile to bring the good back.
 
-- **Eurostat**
+   See:
+   http://unstats.un.org/unsd/tradekb/Knowledgebase/Reexports-and-Reimports
 
-   1. Eurostat classifies areas in their geonomenclature. The are
-      code is converted in FAO country code using a specific
-      convertion table, stored in the SWS, provided by Team B/C.
-      Area codes not mapping to any FAO country code or mapping to
-      code 252 (which correpond not defined area) is reported and
-      the records for these area codes are removed.
+#### Eurostat
 
-       ##   ComM49 FAO         Name
-       ## 1      1  68 France      
-       ## 2      2  15 Belg.-Luxbg 
-       ## 3      3 150 Netherlands 
-       ## 4      4  79 Fr Germany  
-       ## 5      5 106 Italy       
-       ## 6      6 229 Utd. Kingdom
+1. Eurostat classifies areas in their geonomenclature. These codes
+   are converted in FAO country codes using a specific convertion
+   table, stored in the SWS, provided by Team B/C.  Area codes not
+   mapping to any FAO country code or mapping to code 252 (which
+   correpond undefined areas) is reported and the records for
+   these area codes are removed.
 
-   2. Commodity codes are reported in CN8 codes (Combined
-      Nomenclature 8 digits). The codes are converted in FCL (FAO
-      Commodity List) codes. This step is performed using the same
-      package (hsfclmap) as for UNSD Tariffline. If a specific
-      record has a CN8 code not mapping to any specific FCL code,
-      then the record is reported and removed. If a country is not
-      included in the package of the mapping for that specific
-      year, all the records for the reporting country are removed.
-      
-      Eurostat data are already provided in the correct units of
-      measurements and do not need futher conversions. (No need of
-      example, same as before).
+    ##   ComM49 FAO         Name
+    ## 1      1  68 France      
+    ## 2      2  15 Belg.-Luxbg 
+    ## 3      3 150 Netherlands 
+    ## 4      4  79 Fr Germany  
+    ## 5      5 106 Italy       
+    ## 6      6 229 Utd. Kingdom
 
-   3. Information of the FCL units is added. This step is
-      straighforward since for Eurostat the units are already
-      corrected. (No need of example, same as before).
+2. Commodity codes are reported in CN8 codes (*Combined
+   Nomenclature 8 digits*). The codes are converted in FCL (*FAO
+   Commodity List*) codes. This step is performed using the same
+   package (`hsfclmap`) as for UNSD Tariffline. If a specific
+   record has a CN8 code not mapping to any specific FCL code,
+   then the record is reported and removed. If a country is not
+   included in the package of the mapping for that specific year,
+   all the records for the reporting country are removed.
+   
+   Eurostat data are already provided in the correct units of
+   measurements and do not need futher conversions. (No need of
+   example, same as before).
 
-   4. Values are converted from EUR to USD using the table, stored
-      in the SWS, with avarage currency for each year provided by
-      Team B/C.
+3. Information of the FCL units is added. This step is
+   straighforward since for Eurostat the units are already
+   correct. (No need of example, same as before).
 
-       ##   Year ExchangeRate
-       ## 1 2000     0.924020
-       ## 2 2001     0.892860
-       ## 3 2002     0.946000
-       ## 4 2003     1.131200
-       ## 5 2004     1.243304
-       ## 6 2005     1.245755
+4. Values are converted from EUR to USD using the table, stored in
+   the SWS, with avarage EUR/USD exchange rate for each year
+   provided by Team B/C.
+
+    ##   Year ExchangeRate
+    ## 1 2000     0.924020
+    ## 2 2001     0.892860
+    ## 3 2002     0.946000
+    ## 4 2003     1.131200
+    ## 5 2004     1.243304
+    ## 6 2005     1.245755
 
 ### Unified Official Trade Flows Dataset
 
@@ -220,99 +225,99 @@ removed and the final tables has all the countries worldwide.
 
 ### Standardization, editing and outlier detection
 
-- **Application of Notes**. Perennial and yearly specific notes
-  are mdb files provided by the Team B/C already saved in a R
-  friendly dataset. The notes might be of different nature. They
-  might be a multiplicative factor, or forcing a value. More
-  information about the notes can be provided by team B/C. The
-  notes might be year specific or for all years (in this case
-  reported as NA) and might refer to HS or/and FCL codes. This
-  notes (or adjustments) were developed during the years and they
-  are available from 1997 to 2013. Notes of 2014 are copied from
-  notes in 2013, as a partial solution, but this need future work
-  in the future.
- 
-  Comparing results between the new and the old procedure showed
-  that sometimes the discrepancies between the two results are due
-  to the application of the notes.
+#### Application of Notes
 
-  Remark: at the time being, the notes with unspecified year and
-  with application of a factor 1000 are removed, since in the
-  previous years UNSD was reporting some data in tonnes, while now
-  it reports all data in kg.
+Perennial and yearly specific notes are mdb files provided by the
+Team B/C already saved in a R friendly dataset. The notes might be
+of different nature. They might be a multiplicative factor, or
+forcing a value. More information about the notes can be provided
+by team B/C. The notes might be year specific or for all years (in
+this case reported as NA) and might refer to HS or/and FCL codes.
+This notes (or adjustments) were developed during the years and
+they are available from 1997 to 2013. Notes of 2014 are copied
+from notes in 2013, as a partial solution, but this need future
+work in the future.
 
-  More details on how to read the notes can be given by team B/C.
+Comparing results between the new and the old procedure showed
+that sometimes the discrepancies between the two results are due
+to the application of the notes.
 
-    ##   year flow      hs  fcl partner weight  qty value special reporter
-    ## 1 2012    1      NA   17      NA     10 <NA>  <NA>    <NA>        8
-    ## 2 2005    2      NA 1168      NA    100 <NA>  <NA>    <NA>       11
-    ## 3   NA   NA      NA  836      NA    0.6 <NA>  <NA>    <NA>       52
-    ## 4 2013    4      NA  702     194    0.1 <NA>  <NA>    <NA>       13
-    ## 5 2011    1      NA 1061      NA    0.1 <NA>  <NA>    <NA>       37
-    ## 6 2013    2 9030000  671     231     10 <NA>  <NA>    <NA>       33
+More details on how to read the notes can be given by team B/C.
 
-- **Unit Values computation** For each record having both quantity
-  and value (thus excluding all commodity reported just as value),
-  the unit of value ($u_v$) is computed as following:
+  ##   year flow      hs  fcl partner weight  qty value special reporter
+  ## 1 2012    1      NA   17      NA     10 <NA>  <NA>    <NA>        8
+  ## 2 2005    2      NA 1168      NA    100 <NA>  <NA>    <NA>       11
+  ## 3   NA   NA      NA  836      NA    0.6 <NA>  <NA>    <NA>       52
+  ## 4 2013    4      NA  702     194    0.1 <NA>  <NA>    <NA>       13
+  ## 5 2011    1      NA 1061      NA    0.1 <NA>  <NA>    <NA>       37
+  ## 6 2013    2 9030000  671     231     10 <NA>  <NA>    <NA>       33
+
+#### Unit Values computation
+
+For each record having both quantity and value (thus excluding all
+commodity reported just as value), the unit of value ($u_v$) is
+computed as following:
 
   $$u_v = \frac{qty}{value}$$
 
-- **Outlier Detection and Imputation**. Based on the untis of
-  measurementes we might have cases of outlier. The target
-  variables are traded quantities so the outlier test on the unit
-  values is a tool to correct quantity data. The outlier are
-  calculated based on the distribution of the unit of value for
-  the same country, year and flow at the HS level (tariffline
-  level). The reason to identify the outlier at the HS level is
-  due to the fact that, under the same FCL code, different
-  commodity might fall (i.e. maize seed and seed). The outlier are
-  detecting using the Tukey's procedure:
+#### Outlier Detection and Imputation
 
-  - The Tukey's five number summary are calculated: minimum (m),
-    lower-hinge ($lh$), median ($med$), upper-hinge ($uh$) and
-    maximum ($M$).
+Based on the units of measurement we might have cases of anomalous
+observations (outliers). The target variables are traded
+quantities so the outlier test on the unit values is a tool to
+correct quantity data. The outlier are calculated based on the
+distribution of the unit of value for the same country, year and
+flow at the HS level (tariffline level). The reason to identify
+the outlier at the HS level is due to the fact that, under the
+same FCL code, different commodity might fall (i.e. maize seed and
+seed). The outlier are detecting using the Tukey's procedure:
 
-  - The coefficient for the outlier detection is set up as
-    suggested by Tukey to 1.5 ($coef$).
+- The Tukey's five number summary are calculated: minimum (m),
+  lower-hinge ($lh$), median ($med$), upper-hinge ($uh$) and
+  maximum ($M$).
 
-  - For each value is calculated a specific distance from the
-    lower or the upper-hinge in the following way:
+- The coefficient for the outlier detection is set up as suggested
+  by Tukey to 1.5 ($coef$).
 
-    $$\text{x is outlier if} \begin{cases}
-        x < lh - coef * iqr, & \text{lower outlier},\\
-        x > up + coef * iqr, & \text{upper outlier}.
-      \end{cases}$$
+- For each value is calculated a specific distance from the lower
+  or the upper-hinge in the following way:
 
-  where $iqr$ is the interquartile range.
+  $$\text{x is outlier if} \begin{cases}
+      x < lh - coef * iqr, & \text{lower outlier},\\
+      x > up + coef * iqr, & \text{upper outlier}.
+    \end{cases}$$
 
-  The traded quantieis outlier are then corrected using the
-  corresponding value (which remain fixed) and dividing it by the
-  median unit of value of that specific commodity, country, flow
-  and year. In this way only few official quantity data are
-  corrected.
+where $iqr$ is the interquartile range.
 
-  Remark: in the module, one of the input parameter for the user
-  is the oultlier coefficient By default this is set up to 1.5.
-  More info regaring the outlier coefficient is given in the
-  Future Work section.
+The traded quantities that are identified as outliers are then
+corrected using the corresponding value (which remain fixed) and
+dividing it by the median unit of value of that specific
+commodity, country, flow and year. In this way only few official
+quantity data are corrected.
 
-- **Missing Quantities Detection and Imputation**. For records in
-  which the commodity has to be reported in quantity and the
-  quantity is missing and the value is present, the corresponding
-  quantity is imputed dividing the corresponding value by the
-  median of the units of value of the corresponding commodity (HS
-  level/country/flow/year)
+**Remark**: in the module, one of the input parameter for the user
+is the outlier coefficient. By default this is set up to 1.5.
+More info regaring the outlier coefficient is given in the Future
+Work section.
+
+#### Missing Quantities Detection and Imputation
+
+For records in which the commodity has to be reported in quantity
+and the quantity is missing and the value is present, the
+corresponding quantity is imputed dividing the corresponding value
+by the median of the units of value of the corresponding commodity
+(HS level/country/flow/year)
 
 ### Mirroring and Balancing
 
 The module produce the list of non-reporting countries: these are
 the countries present as partners but absent as reporters. For
-this countries the mirroring routine is applied: the corrisponding
-trade of the non-reporting countries are extracted from the
-partners inverting the flows. The quantities are the same while
-the values are corrected by a factor of 12% due to the CIF/FOB
-conversion. This need more work, details in the Future Work
-section.
+these countries the mirroring routine is applied: the
+corrisponding trade of the non-reporting countries are extracted
+from the partners inverting the flows. The quantities are the same
+while the values are corrected by a factor of 12% due to the
+CIF/FOB conversion. This need more work, details in the Future
+Work section.
 
 ## Flags
 
@@ -341,13 +346,13 @@ respect the SWS standards:
   is no aggregation at this point. The routine just add the
   corresponding CPC code.
 
-- Concersion from FAO country code to M49.
+- Conversion from FAO country code to M49.
 
 - Each row of the final output must be or quantity or value
   specific, while so far the module keeps this information in one
   row. We therefore split this information in two separated rows.
 
-The first submodule save the final output in the
+The first submodule saves the final output in the
 `completed_tf_cpc_m49` dataset, within the trade domain.
 
 # Total trade CPC
@@ -382,12 +387,12 @@ module.
 - In the vignettes folder, a sample of pre-analysis is given, but
   not integrated in the main module (file name:
   preanalysis\_2009.Rmd). The pre-analysis script calculate the
-  total number of recordsfor both Eurostat and UNSD Tariffline
-  datasets and the distribution of lenght of the commodty HS codes
-  (for UNSD Tariffline) and CN8 for Eurostat is performed. For
+  total number of records for both Eurostat and UNSD Tariffline
+  datasets and the distribution of length of the commodty HS codes
+  (for UNSD Tariffline and CN8 for Eurostat) is performed. For
   each country we report if data includes imports, exports,
-  re-exports and re-imports at all possible lenght. All records
-  with hs-lenght (for UNSD Tariffline) or CN8-lenght (for
+  re-exports and re-imports at all possible length. All records
+  with hs-length (for UNSD Tariffline) or CN8-length (for
   Eurostat) less than 6 are removed. The pre-analysis script
   produces a html file.
 
@@ -416,7 +421,7 @@ module.
 ## Time Series Analysis
 
 - Upon availability of time-series data, a check of the CPC-based
-  unit values accross the time series should be performed.
+  unit values across the time series should be performed.
   Differentiation between errors in the order of magnitude on
   quantities and values (time series) and outliers (cross
   section). An additional submodule of imputation of missing data
@@ -436,8 +441,8 @@ module.
 
 ## Re-import and Re-export
 
-- All re-import and re-export is considered as, respectively,
-  import and export.
+- All re-imports and re-exports are considered as, respectively,
+  imports and exports.
 
 - More study might be conducted in order to identify countries
   more prone to report re-import and re-export.
@@ -474,7 +479,7 @@ module.
 
 ## Mapping from HS to FCL
 
-- In the module for commodities we have 2 different mapping. From
+- In the module for commodities we have 2 different mappings. From
   HS to FCL, using mapping produced by team B/C and then from FCL
   to CPC 2.1. This mapping is available for the following years:
   1997, 2001, 2002, 2003, 2004, 2005, 2006, 2007, 2008, 2009,
@@ -483,14 +488,14 @@ module.
   but the results need to be checked.
 
 - In the future direct mapping from HS to CPC has been asked from
-  managment. A possible solution, where adding the column with the
+  management. A possible solution, where adding the column with the
   one-to-one CPC codes has been sent to Carola (09.06.2016), but
   anyway this needs revision
   ([link](https://drive.google.com/drive/folders/0B_Z6srBtmyJRUmtaaXphTllZUDA))
 
 ## Mapping from Comtrade M49 and Geonomenclature directly to M49
 
-- The country codes, as the commodity ones, have two step of
+- The country codes, as the commodity ones, have two steps of
   mapping. This results in higher risk of data loss due to
   unsolved mapping.
 
